--- a/stylesheet.css
+++ b/stylesheet.css
@@ -56,7 +56,6 @@ body {
 }
 
 .image img {
-    display: block;
     margin: 0 auto;
     width: 16em;
 }
@@ -124,7 +123,6 @@ a#gitst {
 /* MEDIA QUERY PER SMARTPHONE */
 @media screen and (max-width: 768px) {
     .menu {
-        display: block;
         position: static;
         width: auto;
     }
@@ -154,10 +152,10 @@ a#gitst {
         padding: 0 20px;
         font-size: 1.2em;
     }
-
-    .image {
-        margin: 2em auto;
-    }
+  .image {
+            padding: 2em;
+            margin: auto;
+        }
 
     p#pr {
         padding: 0 20px;
